[gd_scene load_steps=30 format=3 uid="uid://blnjmna71025t"]

[ext_resource type="Script" uid="uid://bqud0bqb2dq15" path="res://scripts/select_level.gd" id="1_adu0t"]
[ext_resource type="Texture2D" uid="uid://6rflweclk7du" path="res://Jungle Asset Pack/parallax background/saddle-brown-color-solid-background-1920x1080.png" id="2_jjqxc"]
[ext_resource type="Texture2D" uid="uid://b6y5vkou3j877" path="res://Jungle Asset Pack/parallax background/Lv1.png" id="3_uo0xe"]
[ext_resource type="Texture2D" uid="uid://dwdnu5osgy8ne" path="res://Jungle Asset Pack/parallax background/Lv2.png" id="4_vp03w"]
[ext_resource type="Texture2D" uid="uid://k6rlbh1o1qen" path="res://Jungle Asset Pack/parallax background/Lv3.png" id="5_82unp"]
[ext_resource type="Texture2D" uid="uid://cpdroaybjaacl" path="res://Jungle Asset Pack/parallax background/Ổ Khóa.png" id="5_f3alr"]
[ext_resource type="Texture2D" uid="uid://dqtxwy55uhmdk" path="res://Jungle Asset Pack/parallax background/Lv4.png" id="6_82unp"]
[ext_resource type="Texture2D" uid="uid://m6t1xsf4dqfu" path="res://Jungle Asset Pack/parallax background/Lv5.png" id="7_i1c1a"]
[ext_resource type="Texture2D" uid="uid://btfe8eoe6ivjt" path="res://Jungle Asset Pack/parallax background/Lv6.png" id="8_ibsxg"]
[ext_resource type="Texture2D" uid="uid://b2w8r71c3dg5" path="res://Jungle Asset Pack/parallax background/Lv7.png" id="9_xlyyc"]
[ext_resource type="Texture2D" uid="uid://bkm8ls5d1j2gq" path="res://Jungle Asset Pack/parallax background/Lv10.png" id="10_i1c1a"]
[ext_resource type="Texture2D" uid="uid://ci1w865vhjd4h" path="res://Jungle Asset Pack/parallax background/Lv8.png" id="11_xlyyc"]
[ext_resource type="Texture2D" uid="uid://xovk1ahe08aq" path="res://Jungle Asset Pack/parallax background/Lv9.png" id="12_iw11j"]
[ext_resource type="Texture2D" uid="uid://0dfcqssi1j8w" path="res://Jungle Asset Pack/parallax background/Lv11.png" id="13_iw11j"]
[ext_resource type="Texture2D" uid="uid://b53auwfsla30i" path="res://Jungle Asset Pack/parallax background/Lv12.png" id="14_peair"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i1c1a"]
texture = ExtResource("2_jjqxc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ibsxg"]
texture = ExtResource("3_uo0xe")
modulate_color = Color(0.344076, 0.344076, 0.344076, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xlyyc"]
texture = ExtResource("4_vp03w")
modulate_color = Color(0.332881, 0.332881, 0.332881, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iw11j"]
texture = ExtResource("5_82unp")
modulate_color = Color(0.389287, 0.389287, 0.389287, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_peair"]
texture = ExtResource("6_82unp")
modulate_color = Color(0.299547, 0.299547, 0.299547, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f3alr"]
texture = ExtResource("7_i1c1a")
modulate_color = Color(0.281187, 0.281187, 0.281187, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1b177"]
texture = ExtResource("8_ibsxg")
modulate_color = Color(0.252028, 0.252028, 0.252028, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ckuqx"]
texture = ExtResource("9_xlyyc")
modulate_color = Color(0.281187, 0.281187, 0.281187, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_85wt0"]
texture = ExtResource("11_xlyyc")
modulate_color = Color(0.306923, 0.306923, 0.306923, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rtkmm"]
texture = ExtResource("12_iw11j")
modulate_color = Color(0.277528, 0.277528, 0.277528, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8gyec"]
texture = ExtResource("10_i1c1a")
modulate_color = Color(0.244776, 0.244776, 0.244776, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8p21l"]
texture = ExtResource("13_iw11j")
modulate_color = Color(0.230315, 0.230315, 0.230315, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iw11j"]
bg_color = Color(0.894922, 0.894922, 0.894922, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_joqlv"]
texture = ExtResource("14_peair")
modulate_color = Color(0.244776, 0.244776, 0.244776, 1)

[node name="SelectLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = -9.0
offset_right = 18.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_adu0t")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -17.0
offset_top = 5.0
offset_right = -17.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_i1c1a")

[node name="btnlv1" type="Button" parent="."]
layout_mode = 0
offset_left = -17.0
offset_top = 7.0
offset_right = 329.0
offset_bottom = 139.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_ibsxg")
text = "LEVEL 1
"

[node name="btnlv2" type="Button" parent="."]
layout_mode = 0
offset_left = 380.0
offset_top = 4.0
offset_right = 727.0
offset_bottom = 137.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_xlyyc")
text = "LEVEL 2
"

[node name="lock2" type="TextureRect" parent="btnlv2"]
modulate = Color(0.960351, 0.960351, 0.960351, 1)
self_modulate = Color(0.270222, 0.270222, 0.270222, 1)
layout_mode = 0
offset_left = 1.0
offset_top = -2.0
offset_right = 345.0
offset_bottom = 138.0
texture = ExtResource("5_f3alr")
expand_mode = 3

[node name="btnlv3" type="Button" parent="."]
layout_mode = 0
offset_left = 778.0
offset_top = 2.0
offset_right = 1137.0
offset_bottom = 136.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_iw11j")
text = "LEVEL 3
"

[node name="lock3" type="TextureRect" parent="btnlv3"]
modulate = Color(0.252028, 0.252028, 0.252028, 1)
layout_mode = 0
offset_right = 360.0
offset_bottom = 137.0
texture = ExtResource("5_f3alr")
expand_mode = 3

[node name="btnlv4" type="Button" parent="."]
layout_mode = 0
offset_left = -23.0
offset_top = 167.0
offset_right = 323.0
offset_bottom = 313.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_peair")
text = "LEVEL 4
"

[node name="lock4" type="TextureRect" parent="btnlv4"]
modulate = Color(0.255659, 0.255659, 0.255659, 1)
layout_mode = 0
offset_left = 3.0
offset_top = -1.0
offset_right = 346.0
offset_bottom = 149.0
texture = ExtResource("5_f3alr")
expand_mode = 3

[node name="btnlv5" type="Button" parent="."]
layout_mode = 0
offset_left = 380.0
offset_top = 167.0
offset_right = 725.0
offset_bottom = 313.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_f3alr")
text = "LEVEL 5
"

[node name="lock5" type="TextureRect" parent="btnlv5"]
modulate = Color(0.255659, 0.255659, 0.255659, 1)
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 343.0
offset_bottom = 151.0
texture = ExtResource("5_f3alr")
expand_mode = 3

[node name="btnlv6" type="Button" parent="."]
layout_mode = 0
offset_left = 788.0
offset_top = 173.0
offset_right = 1130.0
offset_bottom = 321.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_1b177")
text = "LEVEL 6
"

[node name="lock6" type="TextureRect" parent="btnlv6"]
modulate = Color(0.252028, 0.252028, 0.252028, 1)
layout_mode = 0
offset_right = 341.0
offset_bottom = 150.0
texture = ExtResource("5_f3alr")
expand_mode = 3

[node name="btnlv7" type="Button" parent="."]
layout_mode = 0
offset_left = -19.0
offset_top = 345.0
offset_right = 330.0
offset_bottom = 491.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_ckuqx")
text = "LEVEL 7
"

[node name="lock7" type="TextureRect" parent="btnlv7"]
modulate = Color(0.325441, 0.325441, 0.325441, 1)
layout_mode = 0
offset_right = 349.0
offset_bottom = 148.0
texture = ExtResource("5_f3alr")
expand_mode = 3

[node name="btnlv8" type="Button" parent="."]
layout_mode = 0
offset_left = 382.0
offset_top = 346.0
offset_right = 731.0
offset_bottom = 498.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_85wt0")
text = "LEVEL 8
"

[node name="lock8" type="TextureRect" parent="btnlv8"]
modulate = Color(0.310617, 0.310617, 0.310617, 1)
layout_mode = 0
offset_right = 351.0
offset_bottom = 154.0
texture = ExtResource("5_f3alr")
expand_mode = 3

[node name="btnlv9" type="Button" parent="."]
layout_mode = 0
offset_left = 788.0
offset_top = 349.0
offset_right = 1138.0
offset_bottom = 498.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_rtkmm")
text = "LEVEL 9
"

[node name="lock9" type="TextureRect" parent="btnlv9"]
modulate = Color(0.288518, 0.288518, 0.288518, 1)
layout_mode = 0
offset_right = 349.0
offset_bottom = 152.0
texture = ExtResource("5_f3alr")
expand_mode = 3

[node name="btnlv10" type="Button" parent="."]
layout_mode = 0
offset_left = -16.0
offset_top = 520.0
offset_right = 340.0
offset_bottom = 660.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_8gyec")
text = "LEVEL 10
"

[node name="lock10" type="TextureRect" parent="btnlv10"]
modulate = Color(0.321728, 0.321728, 0.321728, 1)
layout_mode = 0
offset_right = 354.0
offset_bottom = 140.0
texture = ExtResource("5_f3alr")
expand_mode = 3

[node name="btnlv11" type="Button" parent="."]
layout_mode = 0
offset_left = 382.0
offset_top = 521.0
offset_right = 738.0
offset_bottom = 662.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_8p21l")
text = "LEVEL 11
"

[node name="lock11" type="TextureRect" parent="btnlv11"]
modulate = Color(0.321728, 0.321728, 0.321728, 1)
layout_mode = 0
offset_right = 355.0
offset_bottom = 142.0
texture = ExtResource("5_f3alr")
expand_mode = 3

[node name="btnNext" type="Button" parent="."]
layout_mode = 0
offset_left = 1064.0
offset_top = 310.0
offset_right = 1133.0
offset_bottom = 379.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_iw11j")
text = "->"

[node name="btnlv12" type="Button" parent="."]
layout_mode = 0
offset_left = 797.0
offset_top = 512.0
offset_right = 1138.0
offset_bottom = 656.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_joqlv")
text = "LEVEL 12
"

[node name="lock12" type="TextureRect" parent="btnlv12"]
modulate = Color(0.306923, 0.306923, 0.306923, 1)
layout_mode = 0
offset_right = 339.0
offset_bottom = 152.0
texture = ExtResource("5_f3alr")
expand_mode = 3
